# infinix-protocol

./: ARCHITECTURE.md  Anchor.toml  Cargo.toml  README.md
dex-offchain/: Cargo.toml  README.md
dex-offchain/src/: config.rs  factory.rs  jupiter.rs  lib.rs  logging.rs  rest.rs  traits.rs
dex-offchain/tests/: integration.rs
offchain-integration/: Cargo.toml
offchain-integration/src/: dex.rs  error.rs  lib.rs  oracles.rs  traits.rs
oracle-offchain/: Cargo.toml  README.md
oracle-offchain/src/: chainlink.rs  config.rs  factory.rs  lib.rs  logging.rs  pyth.rs  rest.rs  switchboard.rs  traits.rs
oracle-offchain/tests/: integration.rs
programs/infinix/: Cargo.toml
programs/infinix/src/: events.rs  lib.rs  state.rs
programs/infinix/src/instructions/auction/: add_rebalance_details.rs  bid.rs  close_auction.rs  open_auction.rs  open_auction_permissionless.rs  start_rebalance.rs
programs/infinix/src/instructions/crank/: crank_fee_distribution.rs  distribute_fees.rs  mod.rs  poke_infinix.rs
programs/infinix/src/instructions/owner/: add_to_basket.rs  init_infinix.rs  init_infinix_2022.rs  init_or_update_actor.rs  kill_infinix.rs  mod.rs  remove_actor.rs  remove_from_basket.rs  update_infinix.rs
programs/infinix/src/instructions/owner/migration/: create_infinix_from_old_program.rs  migrate_infinix_tokens.rs  mod.rs  start_infinix_migration.rs  update_basket_in_new_infinix_program.rs
programs/infinix/src/instructions/user/: close_user_pending_token_amount.rs  mod.rs
programs/infinix/src/instructions/user/mint_infinix/: add_to_pending_basket.rs  mint_infinix_token.rs  mod.rs  remove_from_pending_basket.rs
programs/infinix/src/instructions/user/redeem_infinix/: burn_infinix_token.rs  mod.rs  redeem_from_pending_basket.rs
programs/infinix/src/utils/accounts/: actor.rs  auction.rs  fee_distribution.rs  fee_recipients.rs  infinix.rs  infinix_basket.rs  mod.rs  rebalance.rs  user_pending_basket.rs
programs/infinix/src/utils/structs/: auction_status.rs  fixed_size_string.rs  infinix_status.rs  infinix_token_amount.rs  mod.rs  open_auction_config.rs  prices.rs  rebalance_details.rs  roles.rs  token_amount.rs
programs/infinix_admin/: Cargo.toml
programs/infinix_admin/src/: events.rs  lib.rs  state.rs
programs/infinix_admin/src/instructions/: init_program_registrar.rs  mod.rs  set_infinix_fee_config.rs  update_program_registrar.rs
programs/infinix_admin/src/utils/accounts/: dao_fee_config.rs  infinix_fee_config.rs  mod.rs  program_registrar.rs
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs
shared/src/constants/: common.rs  seeds.rs
shared/src/utils/: account_util.rs  math_util.rs  token_util.rs
src/: accounts.rs  error.rs  factories.rs  instructions.rs  lib.rs  optimizations.rs  program.rs  version.rs
src/account_models/: algorithm_registry_account.rs  asset.rs  basket.rs  basket_index_state_account.rs  dex_registry_account.rs  index_token.rs  mod.rs  oracle_registry_account.rs  strategy_registry_account.rs
src/accounts/: algorithm_registry_account.rs  asset.rs  basket.rs  dex_registry_account.rs  index_token.rs  mod.rs  oracle_registry_account.rs  strategy_registry_account.rs
src/algorithms/: algorithm_registry.rs  execution_optimizer.rs  implementation_shortfall.rs  market_impact.rs  mod.rs  pov.rs  risk_assessment.rs  risk_management.rs  smart_routing.rs  traits.rs  twap.rs  vwap.rs
src/algorithms/execution/: genetic.rs  ml.rs  risk_management.rs  smart_routing.rs  tests.rs  twap.rs  vwap.rs
src/algorithms/execution_optimizer/: genetic.rs  ml.rs  mod.rs  tests.rs  types.rs
src/basket/: basket_manager.rs  config.rs  enhanced_trading_engine.rs  execution_optimizer.rs  liquidity_aggregator.rs  metrics.rs  mod.rs  result.rs  risk_manager.rs  strategy.rs  trading_engine.rs  types.rs
src/core/: adapter.rs  cache.rs  constants.rs  events.rs  logging.rs  macros.rs  math.rs  mod.rs  performance.rs  registry.rs  security.rs  security_hardening.rs  traits.rs  types.rs  validation.rs
src/core/math/: advanced.rs  mod.rs  (+5 more)
src/dex/: adapter.rs  adapter_registry.rs  drift_adapter.rs  factory.rs  jupiter.rs  jupiter_adapter.rs  lifinity.rs  lifinity_adapter.rs  logging.rs  mango_adapter.rs  meteora.rs  meteora_adapter.rs  mod.rs  openbook.rs  openbook_adapter.rs  orca.rs  orca_adapter.rs  phoenix.rs  phoenix_adapter.rs  raydium.rs  raydium_adapter.rs  traits.rs
src/errors/: algorithm_error.rs  asset_error.rs  basket_error.rs  dex_error.rs  error_codes.rs  index_token_error.rs  mod.rs  oracle_error.rs  security_error.rs  strategy_error.rs  tests.rs  validation_error.rs
src/events/: asset_event.rs  basket_event.rs  index_token_event.rs  mod.rs
src/factories/: asset_factory.rs  factory_utils.rs  mod.rs  rebalance_utils.rs  rebalancing_strategy_factory.rs  weight_strategy_factory.rs
src/index_tokens/: instructions.rs  mod.rs  state.rs  trading.rs  types.rs
src/instructions/: adapter.rs  algorithms.rs  arbitrage.rs  asset.rs  basket.rs  batch_trade.rs  dex.rs  index_token.rs  mod.rs  oracles.rs  strategies.rs  unified.rs
src/oracles/: adapter.rs  adapter_registry.rs  api3.rs  band_protocol.rs  chainlink.rs  chainlink_adapter.rs  factory.rs  logging.rs  mod.rs  pyth.rs  pyth_adapter.rs  switchboard.rs  switchboard_adapter.rs  traits.rs
src/services/: algorithm_service.rs  asset_service.rs  basket_service.rs  crypto_service.rs  dex_service.rs  etf_service.rs  index_token_service.rs  mod.rs  oracle_service.rs  portfolio_service.rs  router_service.rs  rwa_service.rs  stablecoin_service.rs  stock_service.rs  strategy_service.rs
src/state/: baskets.rs  common.rs  factories.rs  mod.rs  optimizers.rs  strategies.rs
src/strategies/: advanced_strategies.rs  config.rs  mod.rs  rebalancing_strategies.rs  strategy_factory.rs  strategy_registry.rs  strategy_validator.rs  traits.rs  types.rs  weight_strategies.rs
src/utils/: batch_optimizer.rs  cache.rs  math.rs  mod.rs  performance.rs  price.rs  simplified.rs  validation.rs
src/validation/: asset_validation.rs  basket_validation.rs  index_token_validation.rs  mod.rs
tests/: infinix.ts
(+400 files in other folders)
