[package]
name = "dex-offchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
log = "0.4"
actix-web = "4.3"
async-trait = "0.1"
anyhow = "1.0"
lazy_static = "1.4"
# 生产级DEX/AMM官方SDK（如有）
# raydium-sdk = "*"
# jupiter-aggregator = "*"
# orca-sdk = "*"
# lifinity-sdk = "*"
# meteora-sdk = "*"
# phoenix-sdk = "*"
# openbook-sdk = "*"
# drift-sdk = "*"
# mango-sdk = "*"
# 监控与指标
metrics = "0.21"
prometheus = "0.13"
# 测试
actix-rt = "2.8" 