[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
crate-type = ["lib"]

[dependencies]
anchor-lang = "=0.31.1"
anchor-spl = "=0.31.1"
bytemuck = "=1.23.1"
spl-math = { version = "=0.3.0", features = ["no-entrypoint"] }
solana-program = "=2.3.0"

[build-dependencies]
dotenv = "0.15"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[features]
default = []
dev = []
test = []
