[package]
name = "infinix"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "infinix"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

dev = ["shared/dev", "infinix_admin/dev"]
# This feature is used to build the infinix with dev
test = ["shared/test", "infinix_admin/test"]

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = "=0.31.1"
bytemuck = "1.21.0"
infinix_admin = { path = "../infinix_admin", features = ["no-entrypoint"] }
mpl-token-metadata = "=5.1.0"
shared = { path = "../../shared" }
spl-token-metadata-interface = "0.6.0"
spl-type-length-value = "0.7.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }