[package]
name = "infinix_admin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "infinix_admin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

test = ["shared/test"]
dev = ["shared/dev"]

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = "=0.31.1"
bytemuck = "=1.23.1"
shared = { path = "../../shared" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
